loops , for, comprehensions

--- a/foundation/Foundation1.html
+++ b/foundation/Foundation1.html
@@ -14584,11 +14584,6 @@ print(s)</code></pre>
 post = "Asimove"
 name = pre post</code></pre>
 </li>
-<li>What might be the output of this?
-<pre><code>sentence = "Do geese see God?"
-sentence[100]
-sentence[3:100]</code></pre>
-</li>
 <li>What will be output of following sequence of commands in python interpreter? observe the behavior of special variable <strong>_</strong>
 <pre><code>2**2
 _
@@ -17677,8 +17672,7 @@ if __name__ == &quot;__main__&quot;:
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>Finding help!</strong>
-inside interpreter you can use help function to get help of function or module.</p>
+<h3 id="Finding-help!">Finding help!<a class="anchor-link" href="#Finding-help!">&#182;</a></h3><p>inside interpreter you can use help function to get help of function or module.</p>
 
 </div>
 </div>
@@ -18232,7 +18226,7 @@ FILE
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Do-it-yourself">Do it yourself<a class="anchor-link" href="#Do-it-yourself">&#182;</a></h3><ul>
-<li>Write a python script square.py that takes a number as commandline argument and prints square ofthat number.</li>
+<li>Write a python script square.py that takes a number as commandline argument and prints square of that number.</li>
 <li>Write a python script add.py to two numbers given as commandline arguments.</li>
 <li>Write a python script echo.py, equivalent of unix command echo which echoes the text.</li>
 <li>Find out value of variable <code>__name__</code> when module is imported.</li>
